fix trim garbage from realestate api results 7
